Committing title change

--- a/simple.html
+++ b/simple.html
@@ -9,6 +9,7 @@
 		}
 	</style>
 	<link rel="stylesheet" href="css/bootstrap-theme.min.css">
+	<title>Adding HTML Title</title>
 </head>
 <body>
 	<main class="container">
