Added copyright to master

--- a/simple.html
+++ b/simple.html
@@ -20,6 +20,7 @@
 	</main>
 	<footer class="container">
 		<p>&copy; Company 2014</p>
+		<p>Copyright; David Shakarjian</p>
 	</footer>
 </body>
 </html>
